BAEL-6085 | Java 19 for compiling and executing